samples/_failures_safe/1761801113_ff3938_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_147d2e20.c: In function ‘main’:
./samples/SAFE/__tmp_147d2e20.c:138:9: error: expected declaration or statement at end of input
  138 |         printf("6. Exit\n");
      |         ^~~~~~
./samples/SAFE/__tmp_147d2e20.c:138:9: error: expected declaration or statement at end of input
